# df3dPostProcessing

./: .gitignore  df3dpp_joint_angles_clean.py  pyproject.toml  setup.py
data/: clean_3d_best_ventral_best_side.csv  df3dpostprocess_reshape.pkl
df3dPostProcessing/: __init__.py  df3dPostProcessing.py
df3dPostProcessing/utils/: utils_alignment.py  utils_angles.py  utils_ball_info.py  utils_outliers.py  utils_plots.py
examples/: flytracker_raw3d_array.pkl  getAnglesFrom3Dpos.py  getAnglesFrom3Dpos_unedited.py  getAnglesFrom3Dpos_working040523.py  getAnglesFrom3Dpos_working040623_9am.py  get_error.py  outlier_correction.py  pose3d_flytracker_utils.py
examples/ft_data/: ft_3d_array.pkl  joint_angles__flytracker_raw3d_array.pkl  joint_angles__ft_3d_array.pkl  joint_velocities__flytracker_raw3d_array.pkl  joint_velocities__ft_3d_array.pkl
examples/ft_data/input_data/: joints3d_xyz.csv
tests/: test_utils_utils_alignment.py
