[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "df3dPostProcessing"
version = "1.1.0"
description = "Postprocessing functions for DeepFly3D results"
readme.file = "README.md"
readme.content-type = "text/markdown"
license = {file = "LICENSE"}
keywords = ["kinematic analysis", "Drosophila", "DeepFly3D"]
authors = [{name = "Victor Lobato", email = "victor.lobatorios@epfl.ch"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = {Repository = "https://github.com/NeLy-EPFL/df3dPostProcessing"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "opencv-python-headless",
    "opencv-contrib-python-headless",
    "seaborn",
    "scikit-learn",
    "pandas",
    "ikpy",
    "nely-pyba",
]

[tool.setuptools.packages.find]
include = ["df3dPostProcessing"]
